# packer-build-action

./: .gitignore  .pre-commit-config.yaml  README.md  REUSE.toml  action.yaml  pyproject.toml
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: clear-action-cache.yaml  lint.yaml  openssf-scorecard.yaml  release-drafter.yaml  semantic-pull-request.yaml  sha-pinned-actions.yaml  tag-push.yaml  test-build-authkey.yaml  test-build-floating-ip.yaml  test-build-minimal.yaml  test-build-oauth-reusable.yaml  test-build.yaml  test-network-connectivity.yaml  test-python.yaml  test-validate.yaml  zizmor.yaml
examples/workflows/: gerrit-packer-merge.yaml
scripts/: validate-packer.sh
tests/: test_validate.py
