# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2025 The Linux Foundation

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "packer-build-action"
version = "1.0.0"
description = "GitHub Action for building OpenStack images with Packer via bastion hosts"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "The Linux Foundation", email = "releng@linuxfoundation.org"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "PyYAML>=6.0",
]

[tool.pytest.ini_options]
minversion = "9.0.3"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Note: Code coverage is disabled for this action as it primarily
# consists of shell scripts and YAML configurations.
# Tests validate action configurations, workflows, and script syntax.

[tool.pyright]
pythonVersion = "3.11"
include = ["scripts", "tests"]
exclude = [
    "build/",
    "dist/",
    "docs/",
    ".venv/",
    ".mypy_cache/",
    ".pytest_cache/",
    ".ruff_cache/",
    "htmlcov/",
]
typeCheckingMode = "strict"
reportMissingImports = "none"
reportMissingTypeStubs = "none"
reportUnknownParameterType = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportPrivateUsage = "none"
reportUnusedFunction = "none"
reportUnusedVariable = "none"
reportUnusedImport = "none"
reportUnusedCallResult = "none"
reportConstantRedefinition = "none"
reportUnusedClass = "none"
reportUntypedClassDecorator = "none"
reportUnnecessaryIsInstance = "none"
reportPossiblyUnboundVariable = "warning"
reportMissingParameterType = "warning"
